# Zeitplan

./: .gitignore  .travis.yml  LICENSE  README.md  README.org  amplify.yml  aws.org  elm.json  justfile  package.json  webpack.config.js
.github/: FUNDING.yml
.github/workflows/: release-tauri-app.yml
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/auth/zeitplane4e86869/: cli-inputs.json
aws-get-meeting-availability/: Cargo.toml  output.json
aws-get-meeting-availability/src/: main.rs
aws-schedule-meetings/: Cargo.toml
aws-schedule-meetings/src/: main.rs
build-utils/: webpack.development.js  webpack.production.js
desktop/: .gitignore  package.json
desktop/public/scss/: index.scss
desktop/src/: Shared.elm  View.elm  index.js
desktop/src-tauri/: tauri.conf.json
desktop/src/Pages/: About.elm  Home_.elm  Login.elm
infrastructure/: .gitignore  cdk.json  justfile  package-lock.json  package.json
infrastructure/lambdas/: Cargo.toml  sample-input.json
infrastructure/lambdas/add_credits/: add_credits.go  go.mod
infrastructure/lambdas/cancel_payment_intent/: cancel_payment_intent.go  go.mod  go.sum  justfile
infrastructure/lambdas/create_payment_intent/: create_payment_intent.go  go.mod  go.sum  justfile
infrastructure/lambdas/create_user/: create_user.go  go.mod  go.sum  justfile
infrastructure/lambdas/precheck_schedule/: Cargo.toml
infrastructure/lambdas/precheck_schedule/src/: main.rs
infrastructure/lambdas/schedule_meetings/: Cargo.toml
infrastructure/lambdas/schedule_meetings/src/: main.rs
infrastructure/lambdas/src/: schedule-meetings.rs
infrastructure/lambdas/stripe_webhook/: go.mod  go.sum  justfile  stripe_webhook.go
infrastructure/lambdas/update_payment_intent/: go.mod  go.sum  justfile  update_payment_intent.go
infrastructure/lambdas/user_db_stream/: go.mod  go.sum  justfile  user_db_stream.go
infrastructure/lib/: infrastructure-stack.ts  schema.graphql  zeitplan-cdk.ts
lambda-schedule-meetings/: Cargo.toml
lambda-schedule-meetings/src/: main.rs
public/: index.html
public/scss/: index.scss
server/: cdk.json  package.json
server/lib/: server-stack.ts
src/: Main.elm  Old.elm  View.elm  index.js  old-storage.js  storage.js
src-tauri/: Cargo.toml  splashscreen.html  tauri.conf.json
src-tauri/aws-get-user-availability/: Cargo.toml  payload.json
src-tauri/aws-get-user-availability/src/: main.rs
src-tauri/aws-sort/: Cargo.toml
src-tauri/aws-sort/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs
src-tauri/zeitplan-libs/: Cargo.toml
src-tauri/zeitplan-libs/benches/: zeitplan_benches.rs
src-tauri/zeitplan-libs/src/: lib.rs
src/Pages/: About.elm  Home_.elm
src/assets/: index.html
src/assets/styles/: _variables.scss  _variables.scss!  icons.scss  main.scss
src/elm/: Main.elm  MainTests.elm  Page.elm  Route.elm
src/elm/Page/: Home.elm
web/: .parcelrc  .postcssrc-bak  .terserrc  elm.json  package.json
web/parcel-bundle-reports/: default.html
web/public/: index.html  manifest.json
web/public/scss/: index.scss
web/review/: elm.json
web/review/src/: ReviewConfig.elm
web/src/: Auth.elm  Calendar.elm  Decoders.elm  Effect.elm  Old.elm  Shared.elm  View.elm  auth.ts  index.js  index.ts  old-index.js
web/src/GraphQLApi/: InputObject.elm  Interface.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  ScalarCodecs.elm  Subscription.elm  Union.elm  VerifyScalarCodecs.elm
web/src/GraphQLApi/Object/: Calendar.elm  Event.elm  Meeting.elm  PaymentIntent.elm  User.elm
web/src/Pages/: About.elm  Home_.elm  Login.elm  PaymentConfirmation.elm  Pricing.elm  Schedule.elm  SignUp.elm
web/src/ZeitplanApi/: InputObject.elm  Interface.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  ScalarCodecs.elm  Subscription.elm  Union.elm  VerifyScalarCodecs.elm
web/src/ZeitplanApi/Object/: Calendar.elm  Event.elm  Meeting.elm  PaymentIntent.elm  PaymentUpdate.elm  ScheduleMeetingResult.elm  ScheduleResponse.elm  Schedules.elm  StatusResponse.elm  User.elm  ValidationResponse.elm
zeitplan-libs/: Cargo.toml  README.md  justfile
zeitplan-libs/benches/: Long Running Solutions.txt  zeitplan_benches.rs
zeitplan-libs/fuzz/: Cargo.toml
zeitplan-libs/fuzz/fuzz_targets/: fuzz_target_1.rs  schedule.rs  time.rs
zeitplan-libs/src/: data.rs  input.rs  lib.rs  meeting.rs  participant.rs  schedule.rs  time.rs
