[package]
name = "lambda-schedule-meetings"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.5.2"
lambda_runtime = "0.5.1"
serde_json = "1.0.81"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"


zeitplan_libs = { path = "../zeitplan-libs", features = ["serde"] }
