[package]
name = "zeitplan"
version = "0.1.0"
description = "A scheduling app built around a private instructor's specifications. Searches for availability across multiple users and multiple required meetings simultaneously, to allow for a better fit."
authors = [ "Nicholas Dolan <nicholas.dolan1@gmail.com>" ]
license = "GPLv3"
repository = ""
default-run = "Zeitplan"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "event", "notification" ] }
itertools = "0.9"
rayon = "1.4"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]

[[bin]]
name = "Zeitplan"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
