[package]
name = "zeitplan"
version = "1.1.1"
description = "A scheduling app built around a private instructor's specifications. Searches for availability across multiple users and multiple required meetings simultaneously, to allow for a better fit."
authors = [ "Nicholas Dolan <nicholas.dolan1@gmail.com>" ]
license = "GPL-3.0-or-later"
repository = "https://github.com/TheLetterTheta/Zeitplan.git"
default-run = "zeitplan"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
sled = "0.34"
tauri = { version = "0.9", features = [ "event", "open" ] }
tauri-api = "0.7"
itertools = "0.9"
rayon = "1.4"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
no-server = [ "tauri/embedded-server" ]

[[bin]]
name = "zeitplan"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
