[package]
name = "zeitplan_libs"
version = "0.1.1"
authors = ["Nick Dolan <nicholas.dolan1@gmail.com>"]
edition = "2018"
description = "A scheduling application for scheduling multiple meetings at the same time"
license = "GPL-3.0-or-later"
repository = "https://github.com/TheLetterTheta/Zeitplan"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
itertools = "0.10"
thiserror = "1.0"
serde-wasm-bindgen = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "zeitplan_benches"
harness = false
