[package]
name = "zeitplan-lambdas"
version = "0.1.0"
authors = ["Nick Dolan <nicholas.dolan1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.52.0"
aws-sdk-dynamodb = "0.22.0"
lambda_runtime = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zeitplan_libs = { path = "../../zeitplan-libs", features = ["rayon", "serde" ] }

[[bin]]
name = "create-user"
path = "src/create_user.rs"

[[bin]]
name = "get-meeting-availability"
path = "src/get-meeting-availability.rs"