[package]
name = "zeitplan_libs"
version = "0.1.0"
authors = ["Nick Dolan <nicholas.dolan1@gmail.com>",
           "Cameron Otts <otts.cameron@gmail.com>"]
edition = "2018"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
rayon = "1.4"
itertools = "0.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "zeitplan_benches"
harness = false
